start media query

--- a/Craigslist/Index.html
+++ b/Craigslist/Index.html
@@ -10,6 +10,11 @@
     <h2>Craigslist</h2>
     <input type="text" placeholder="Search.."></input>
   </section>
+
+  <section id = "hidden_accounts">
+    <a>Accounts</a>
+  </section>
+
   <nav>
     <button>Community</button>
     <button>Services</button>
