--- a/Craigslist/Index.html
+++ b/Craigslist/Index.html
@@ -11,9 +11,8 @@
     <input type="text" placeholder="Search.."></input>
   </section>
 
-  <section id = "hidden_accounts">
-    <a>Accounts</a>
-  </section>
+  <div id = "hidden_accounts">
+  </div>
 
   <nav>
     <button>Community</button>
