--- a/NoMoreExpired/index.html
+++ b/NoMoreExpired/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -18,6 +23,39 @@
         <div><img src="today.png" alt="back to today" width="30" height="30"><img src="search.png" alt="search icon"
                 width="30" height="30">
             <img id="setting" src="setting.png" alt="account" width="30" height="30"></div>
+    </div>
+    <div class="month-calendar hidden">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
+        <div>11</div>
+        <div>12</div>
+        <div>13</div>
+        <div>14</div>
+        <div>15</div>
+        <div>16</div>
+        <div>17</div>
+        <div>18</div>
+        <div>19</div>
+        <div>20</div>
+        <div>21</div>
+        <div>22</div>
+        <div>23</div>
+        <div>24</div>
+        <div>25</div>
+        <div>26</div>
+        <div>27</div>
+        <div>28</div>
+        <div>29</div>
+        <div>30</div>
+        <div>31</div>
     </div>
     <main>
         <section id="oct-section">
@@ -31,13 +69,14 @@
                         <h3>chips</h3>
                         <p>Target</p>
                     </div>
-                    <div class="timeline-item food">
-                        <h3>bread</h3>
-                        <p>Target</p>
-                    </div>
+
                     <div class="timeline-item medi">
                         <h3>ibuprofen</h3>
                         <p>CVS</p>
+                    </div>
+                    <div class="timeline-item doc">
+                        <h3>amazon prime renew</h3>
+                        <p>Amazon</p>
                     </div>
                 </div>
             </div>
@@ -79,9 +118,10 @@
                         <h3>bacon</h3>
                         <p>Trader Joe's</p>
                     </div>
-                    <div class="timeline-item doc">
-                        <h3>amazon prime renew</h3>
-                        <p>Amazon</p>
+
+                    <div class="timeline-item food">
+                        <h3>bread</h3>
+                        <p>Target</p>
                     </div>
                 </div>
             </div>
