--- a/NoMoreExpired/index.html
+++ b/NoMoreExpired/index.html
@@ -15,50 +15,129 @@
 </head>
 
 <body>
-    <div class="header">
-        <div>
+    <header>
+        <div id="top-left">
             <h1 id="month-header">Oct</h1>
             <img id="down" src="down.png" alt="down" width="20" height="13">
-        </div>
-        <div><img src="today.png" alt="back to today" width="30" height="30"><img src="search.png" alt="search icon"
-                width="30" height="30">
+            <div class="month-calendar hidden">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+                <div>7</div>
+                <div>8</div>
+                <div>9</div>
+                <div>10</div>
+                <div>11</div>
+                <div>12</div>
+                <div>13</div>
+                <div>14</div>
+                <div>15</div>
+                <div>16</div>
+                <div>17</div>
+                <div>18</div>
+                <div>19</div>
+                <div>20</div>
+                <div>21</div>
+                <div>22</div>
+                <div>23</div>
+                <div>24</div>
+                <div>25</div>
+                <div>26</div>
+                <div>27</div>
+                <div>28</div>
+                <div>29</div>
+                <div>30</div>
+                <div>31</div>
+            </div></div>
+        <div id="top-right"><img id="backtotoday" src="today.png" alt="back to today" width="30" height="30"><img
+                src="search.png" alt="search icon" width="30" height="30">
             <img id="setting" src="setting.png" alt="account" width="30" height="30"></div>
-    </div>
-    <div class="month-calendar hidden">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
-        <div>10</div>
-        <div>11</div>
-        <div>12</div>
-        <div>13</div>
-        <div>14</div>
-        <div>15</div>
-        <div>16</div>
-        <div>17</div>
-        <div>18</div>
-        <div>19</div>
-        <div>20</div>
-        <div>21</div>
-        <div>22</div>
-        <div>23</div>
-        <div>24</div>
-        <div>25</div>
-        <div>26</div>
-        <div>27</div>
-        <div>28</div>
-        <div>29</div>
-        <div>30</div>
-        <div>31</div>
-    </div>
+        
+    </header>
+
     <main>
+        <section id="sep-section">
+            <div class="month">
+                <h1>Sep</h1>
+            </div>
+            <div class="timeline-content">
+                <div class="date">
+                    <h3>Wed</h3>
+                    <p class="circle">4</p>
+                </div>
+                <div class="timeline-items">
+                    <div class="timeline-item food">
+                        <h3>chips</h3>
+                        <p>Target</p>
+                    </div>
+
+                    <div class="timeline-item medi">
+                        <h3>ibuprofen</h3>
+                        <p>CVS</p>
+                    </div>
+                    <div class="timeline-item doc">
+                        <h3>amazon prime renew</h3>
+                        <p>Amazon</p>
+                    </div>
+                </div>
+            </div>
+            <div class="timeline-content">
+                <div class="date">
+                    <h3>Thu</h3>
+                    <p class="circle">12</p>
+                </div>
+                <div class="timeline-items">
+                    <div class="timeline-item food">
+                        <h3>Yogurt</h3>
+                        <p>Trader Joe's</p>
+                    </div>
+                </div>
+            </div>
+            <div class="timeline-content">
+                <div class="date">
+                    <h3>Fri</h3>
+                    <p class="circle">20</p>
+                </div>
+                <div class="timeline-items">
+                    <div class="timeline-item medi">
+                        <h3>Allergy medi</h3>
+                        <p>/</p>
+                    </div>
+                    <div class="timeline-item medi">
+                        <h3>flu medi</h3>
+                        <p>/</p>
+                    </div>
+                </div>
+            </div>
+            <div class="timeline-content">
+                <div class="date">
+                    <h3>Sun</h3>
+                    <p class="circle">22</p>
+                </div>
+                <div class="timeline-items">
+                    <div class="timeline-item food">
+                        <h3>bacon</h3>
+                        <p>Trader Joe's</p>
+                    </div>
+
+                    <div class="timeline-item food">
+                        <h3>bread</h3>
+                        <p>Target</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
         <section id="oct-section">
+            <div class="month">
+                <h1>Oct</h1>
+            </div>
             <div class="timeline-content" id="today">
                 <div class="date">
                     <h3>Wed</h3>
