--- a/NoMoreExpired/index.html
+++ b/NoMoreExpired/index.html
@@ -51,11 +51,13 @@
                 <div>29</div>
                 <div>30</div>
                 <div>31</div>
-            </div></div>
-        <div id="top-right"><img id="backtotoday" src="today.png" alt="back to today" width="30" height="30"><img
-                src="search.png" alt="search icon" width="30" height="30">
-            <img id="setting" src="setting.png" alt="account" width="30" height="30"></div>
-        
+            </div>
+        </div>
+        <div id="top-right">
+            <img id="backtotoday" src="today.png" alt="back to today" width="30" height="30">
+            <img src="search.png" alt="search icon" width="30" height="30">
+            <img id="setting" src="setting.png" alt="account" width="30" height="30">
+        </div>
     </header>
 
     <main>
@@ -122,7 +124,6 @@
                         <h3>bacon</h3>
                         <p>Trader Joe's</p>
                     </div>
-
                     <div class="timeline-item food">
                         <h3>bread</h3>
                         <p>Target</p>
@@ -130,10 +131,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
         <section id="oct-section">
             <div class="month">
                 <h1>Oct</h1>
@@ -304,6 +301,7 @@
             </div>
         </section>
     </main>
+
     <menu>
         <div><img id="add" src="add.png" alt="add" width="30" height="30">
         </div>
